Remote commands work

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
-  <button id="test">test</button>
+  <h1>Admin</h1>
+  <button class="request" id="chat">chat</button>
+  <button class="request" id="start">start</button>
+  <button class="request" id="stop">stop</button>
 </body>
 
 </html>
