Adding insert message function

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <button class="request" id="chat">chat</button>
   <button class="request" id="start">start</button>
   <button class="request" id="stop">stop</button>
+  <button class="request" id="insert">insert</button>
 </body>
 
 </html>
